# PythonLibraries

./: .gitignore  Git-Troubleshooter.ps1  README.md  gitfix.ps1  issue-mirror.yaml
OtterForge/: .gitignore  README.md  install_windows.bat  install_windows.ps1  launch_ui.bat  otterforge.project.json  plan.txt  pyproject.toml
OtterForge/.otterforge/: build_history.json  hooks.json  runtime.json
OtterForge/otterforge/: __init__.py  cli.py
OtterForge/otterforge/api/: __init__.py  facade.py
OtterForge/otterforge/builders/: __init__.py  base.py  briefcase.py  c_builder.py  cpp_builder.py  cxfreeze.py  go_builder.py  nuitka.py  py2app.py  py2exe.py  pyinstaller.py  registry.py  rust_builder.py  shiv.py  zipapp_builder.py
OtterForge/otterforge/installers/: __init__.py  appimage.py  base.py  inno_setup.py  nsis.py  pkgbuild.py  registry.py  wix.py
OtterForge/otterforge/mcp/: __init__.py  policy.py  server.py  tool_registry.py
OtterForge/otterforge/models/: __init__.py  (+12 more)
OtterForge/tests/: test_asset_pipeline.py  test_checksum_service.py  test_ci_generator.py  test_cli_smoke.py  test_command_translator.py  test_container_runner.py  test_dependency_auditor.py  test_hook_runner.py  test_matrix_runner.py  test_mcp_server.py  test_memory_migrator.py  test_module_service_dependency_checker.py  test_notification_service.py  test_plugin_loader.py  test_project_organizer.py  test_project_scanner.py  test_sandbox_launcher.py  test_signing_service.py  test_size_analyzer.py  test_storage.py  test_test_runner_gate.py  test_toolchain_package_browser.py  test_version_resolver.py
(+1384 files in other folders)
