[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otterforge"
version = "0.1.0"
description = "Build orchestration tool for Python and native language packaging workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
ui = ["PyQt6>=6.7"]

[project.scripts]
otterforge = "otterforge.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["otterforge*"]